<resources>
    <string name="app_name">LaundryApp</string>
    <string name="card_pelanggan_id">ID_pelanggan</string>
    <string name="nama_pelanggan">Nama_pelanggan</string>
    <string name="alamat_pelanggan">Alamat_pelanggan</string>
    <string name="terdaftar_pelanggan">Terdaftar_pelanggan</string>
    <string name="no_hp">No_HP</string>
    <string name="hubungi">Hubungi</string>
    <string name="lihat">Lihat</string>
    <string name="card_pegawai">ID_Pegawai</string>
    <string name="nama_pegawai">Nama_pegawai</string>
    <string name="cabang">Cabang</string>
    <string name="activity_tambah_pelanggan">Tambah_pelanggan</string>
    <string name="nama_lengkap">Nama_lengkap</string>
    <string name="simpan">Simpan</string>
    <string name="activity_tambah_pegawai">Tambah_pegawai</string>
    <string name="validasi_nama_pelanggan">validasi_nama_pelanggan</string>
    <string name="validasi_alamat_pelanggan">validasi_alamat_pelanggan</string>
    <string name="validasi_nohp_pelanggan">validasi_nohp_pelanggan</string>
    <string name="validasi_cabang_pelanggan">Cabang pelanggan tidak boleh kosong</string>
    <string name="sukses_simpan_pelanggan">Pelanggan berhasil disimpan</string>
    <string name="gagal_simpan_pelanggan">Gagal menyimpan pelanggan</string>
    <string name="validasi_nama_pegawai">validasi_nama_pegawai</string>
    <string name="validasi_alamat_pegawai">validasi_alamat_pegawai</string>
    <string name="validasi_nohp_pegawai">validasi_nohp_pegawai</string>
    <string name="validasi_cabang_pegawai">validasi_cabang_pegawai</string>
    <string name="sukes_simpan_pegawai">sukes_simpan_pegawai</string>
    <string name="gagal_simpan_pegawai">gagal_simpan_pegawai</string>
    <string name="nama_layanan">Nama_layanan</string>
    <string name="card_layanan">ID_layanan</string>
    <string name="harga_layanan">Harga_layanan</string>
    <string name="fill_alamat">Fill_alamat</string>
    <string name="fill_nohp">Fill_nohp</string>
    <string name="fill_cabang">Fill_cabang</string>
    <string name="activity_tambah_layanan">Tambah_layanan</string>
    <string name="alamat_pegawai">Alamat_pegawai</string>
    <string name="validasi_nama_layanan">validasi_nama_layanan</string>
    <string name="validasi_harga_layanan">validasi_harga_layanan</string>
    <string name="validasi_cabang_layanan">validasi_cabang_layanan</string>
    <string name="transaksi">transaksi</string>
    <string name="datapelanggan">datapelanggan</string>
    <string name="namapelangganoutput">namapelangganoutput</string>
    <string name="nohppelangganoutput">nohppelangganoutput</string>
    <string name="pilihpelanggan">pilihpelanggan</string>
    <string name="pilihlayanan">pilihlayanan</string>
    <string name="namalayanan">namalayanan</string>
    <string name="hargalayanan">hargalayanan</string>
    <string name="layananutama">layananutama</string>
    <string name="layanantambahan">layanantambahan</string>
    <string name="tambahan">tambahan</string>
    <string name="proses">proses</string>
    <string name="opsional">opsional</string>
    <string name="konfirmasitransaksi">konfirmasitransaksi</string>
    <string name="informasilayanan">informasilayanan</string>
    <string name="pegawaiyangmenangani">pegawaiyangmenangani</string>
    <string name="totalbayar">totalbayar</string>
    <string name="batal">batal</string>
    <string name="pembayaran">pembayaran</string>
    <string name="invoicetransaksi">invoicetransaksi</string>
    <string name="informasitransaksi">informasitransaksi</string>
    <string name="idtransaksi">idtransaksi</string>
    <string name="tanggaldanwaktu">tanggaldanwaktu</string>
    <string name="metodepembayaran">metodepembayaran</string>
    <string name="detaillayanan">detaillayanan</string>
    <string name="subtotaltambahan">subtotaltambahan</string>
    <string name="terimakasih">terimakasih</string>
    <string name="kirimwhatsapp">kirimwhatsapp</string>
    <string name="cetakstruk">ceetakstruk</string>
    <string name="pelanggan">pelanggan</string>
    <string name="pegawai">pegawai</string>
    <string name="layanan">layanan</string>
    <string name="laporan">laporan</string>
    <string name="tambahcabang">tambahcabang</string>
    <string name="profilsaya">profilsaya</string>
    <string name="kelolainformasi">kelolainformasi</string>
    <string name="informasiakun">informasiakun</string>
    <string name="editprofil">editprofil</string>
    <string name="editprofilinfo">editprofilinfo</string>
    <string name="akun">akun</string>
    <string name="pengaturan">pengaturan</string>
    <string name="pengaturaninfo">pengaturaninfo</string>
    <string name="logout">logout</string>
    <string name="halo">halo</string>
    <string name="selamatdatang">selamatdatang</string>
    <string name="lengkapidata">lengkapidata</string>
    <string name="masuk">masuk</string>
    <string name="belumpunyaakun">belumpunyaakun</string>
    <string name="haloselamatdatang">haloselamatdatang</string>
    <string name="pilihtambahan">pilihtambahan</string>
    <string name="daftarakun">daftarakun</string>
    <string name="namalaundry">namalaundry</string>
    <string name="confirmation">confirmation</string>
    <string name="daftar">daftar</string>
    <string name="sudahpunyaakun">sudahpunyaakun</string>
    <string name="tambahcabanglayout">tambahcabanglayout</string>
    <string name="namacabang">namacabang</string>
    <string name="durasi">durasi</string>
    <string name="namalayanantambah">namalayanantambah</string>
    <string name="gender">gender</string>
    <string name="pria">pria</string>
    <string name="wanita">wanita</string>
    <string name="detailcabang">detailcabang</string>
    <string name="card_cabang">card_cabang</string>
    <string name="kontak">kontak</string>
    <string name="sunting">sunting</string>
    <string name="hapus">hapus</string>
    <string name="detaillayanantambahan">detaillayanantambahan</string>
    <string name="detailpegawai">detailpegawai</string>
    <string name="pilihmetodepembayaran">pilihmetodepembayaran</string>
    <string name="dp">dp</string>
    <string name="gunakanuangtunai">gunakanuangtunai</string>
    <string name="tunai">tunai</string>
    <string name="pembayaranelektronik">pembayaranelektronik</string>
    <string name="belumbayar">belumbayar</string>
    <string name="sudahbayar">sudahbayar</string>
    <string name="selesai">selesai</string>
    <string name="opsimenu">opsimenu</string>
    <string name="estimasi">estimasi</string>
    <string name="kamiselalu">kamiselalu</string>
    <string name="konfirmasipengambilan">konfirmasipengambilan</string>
    <string name="konfirmasi">konfirmasi</string>
    <string name="apakahpelanggan">apakahpelanggan</string>
    <string name="apakahyakin">apakahyakin</string>
    <string name="konfirmasipembayaran">konfirmasipembayaran</string>
    <string name="detailtransaksi">detailtransaksi</string>
    <string name="detailpembayaran">detailpembayaran</string>
    <string name="catatan">catatan</string>
    <string name="title_laporan_transaksi">Laporan Transaksi</string>
    <string name="filter_belum_bayar">Belum Bayar</string>
    <string name="filter_sudah_bayar">Sudah Bayar</string>
    <string name="filter_selesai">Selesai</string>
    <string name="status_dp">DP</string>
    <string name="status_lunas">Lunas</string>
    <string name="status_pesanan_selesai">Selesai</string>
    <string name="status_pesanan_proses">Dalam Proses</string>
    <string name="dialog_title_konfirmasi_pembayaran">Konfirmasi Pembayaran</string>
    <string name="dialog_title_konfirmasi_pengambilan">Konfirmasi Pengambilan</string>
    <string name="dialog_title_detail_transaksi">Detail Transaksi</string>
    <string name="dialog_message_konfirmasi_pembayaran">Apakah Anda yakin pelanggan telah melakukan pembayaran?</string>
    <string name="dialog_message_konfirmasi_pengambilan">Apakah pelanggan telah mengambil cuciannya?</string>
    <string name="label_nama_pelanggan">Nama Pelanggan</string>
    <string name="label_tanggal_transaksi">Tanggal Transaksi</string>
    <string name="label_status_pembayaran">Status Pembayaran</string>
    <string name="label_layanan">Layanan</string>
    <string name="label_harga_layanan">Harga Layanan</string>
    <string name="label_layanan_tambahan">Layanan Tambahan</string>
    <string name="label_subtotal_tambahan">Subtotal Tambahan</string>
    <string name="label_total_bayar">Total Bayar</string>
    <string name="label_metode_pembayaran">Metode Pembayaran</string>
    <string name="label_catatan">Catatan</string>
    <string name="label_tanggal_pelunasan">Tanggal Pelunasan</string>
    <string name="label_tanggal_selesai">Tanggal Selesai</string>
    <string name="btn_batal">Batal</string>
    <string name="btn_konfirmasi">Konfirmasi</string>
    <string name="btn_tutup">Tutup</string>
    <string name="btn_bayar">BAYAR</string>
    <string name="btn_ambil">AMBIL</string>
    <string name="btn_refresh">Refresh</string>
    <string name="empty_state_belum_bayar">Belum ada transaksi yang belum dibayar</string>
    <string name="empty_state_sudah_bayar">Belum ada transaksi yang sudah dibayar</string>
    <string name="empty_state_selesai">Belum ada transaksi yang selesai</string>
    <string name="empty_state_default">Belum ada transaksi</string>
    <string name="toast_user_tidak_terautentikasi">User tidak terautentikasi</string>
    <string name="toast_status_pembayaran_berhasil_diubah">Status pembayaran berhasil diubah ke Sudah Bayar</string>
    <string name="toast_status_transaksi_berhasil_diubah">Status transaksi berhasil diubah ke Selesai</string>
    <string name="toast_status_berhasil_diupdate">Status berhasil diupdate ke %1$s</string>
    <string name="toast_gagal_update_status">Gagal update status: %1$s</string>
    <string name="toast_error_memuat_data">Error memuat data: %1$s</string>
    <string name="default_nama_tidak_tersedia">Nama tidak tersedia</string>
    <string name="default_layanan_tidak_tersedia">Layanan tidak tersedia</string>
    <string name="default_metode_belum_ditentukan">Belum ditentukan</string>
    <string name="default_tanggal_tidak_tersedia">Tanggal tidak tersedia</string>
    <string name="default_tanggal_tidak_valid">Tanggal tidak valid</string>
    <string name="timeline_transaksi_dibuat">Transaksi Dibuat</string>
    <string name="timeline_pembayaran_lunas">Pembayaran Lunas</string>
    <string name="timeline_transaksi_selesai">Transaksi Selesai</string>
    <string name="cd_back_button">Tombol Kembali</string>
    <string name="cd_refresh_button">Tombol Refresh</string>
    <string name="cd_close_dialog">Tutup Dialog</string>
    <string name="loading_data">Memuat data...</string>
    <string name="error_parsing_transaksi">Error parsing transaksi</string>
    <string name="error_loading_transaksi">Error loading transaksi</string>
    <string name="senin">Senin</string>
    <string name="selasa">Selasa</string>
    <string name="rabu">Rabu</string>
    <string name="kamis">Kamis</string>
    <string name="jumat">Jumat</string>
    <string name="sabtu">Sabtu</string>
    <string name="minggu">Minggu</string>
    <string name="januari">Januari</string>
    <string name="februari">Februari</string>
    <string name="maret">Maret</string>
    <string name="april">April</string>
    <string name="mei">Mei</string>
    <string name="juni">Juni</string>
    <string name="juli">Juli</string>
    <string name="agustus">Agustus</string>
    <string name="september">September</string>
    <string name="oktober">Oktober</string>
    <string name="november">November</string>
    <string name="desember">Desember</string>
    <string name="btn_diambil">Diambil</string>
    <string name="text_dibayar">Dibayar</string>
    <string name="text_diambil">Diambil</string>
    <string name="receipt_header_border">================================</string>
</resources>