<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvCARD_PEGAWAI"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BackgroundCard">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="12dp"
        android:elevation="12dp"
        style="@style/widgetcard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            style="@style/widgetcard">

            <TextView
                android:id="@+id/tvID_PEGAWAI"
                style="@style/Font1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="#FFBC13"
                android:fontFamily="@font/poppins_semibold"
                android:padding="8dp"
                android:text="@string/card_pegawai"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:orientation="vertical"
                style="@style/widgetcard">

                <TextView
                    android:id="@+id/tvNAMA_PEGAWAI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvID_PELANGGAN"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="@string/nama_pegawai"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvALAMAT_PEGAWAI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvNAMA_PELANGGAN"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="@string/alamat_pelanggan"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvCABANG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvALAMAT_PEGAWAI"
                    android:fontFamily="@font/poppins"
                    android:text="@string/cabang"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvNO_HP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvCABANG"
                    android:fontFamily="@font/poppins"
                    android:text="@string/no_hp"
                    android:textSize="18sp"
                    android:layout_weight="1"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNO_HP"
                android:gravity="end"
                android:orientation="horizontal"
                android:padding="8dp"
                style="@style/widgetcard">

                <Button
                    android:id="@+id/btHUBUNGI"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/hubungi"
                    android:textSize="14dp"
                    tools:ignore="TextSizeCheck"
                    style="@style/Tombol1"/>

                <Button
                    android:id="@+id/btLIHAT"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/lihat"
                    android:textSize="14dp"
                    tools:ignore="TextSizeCheck"
                    style="@style/Tombol2"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.cardview.widget.CardView>