<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BackgroundCard"
    android:id="@+id/cvCARD_LAYANAN">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        app:cardCornerRadius="12dp"
        android:elevation="12dp"
        style="@style/widgetcard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            style="@style/widgetcard">

            <TextView
                android:id="@+id/tvID_LAYANAN"
                style="@style/Font1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="#0ffc03"
                android:fontFamily="@font/poppins_semibold"
                android:padding="8dp"
                android:text="@string/card_layanan"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:orientation="vertical"
                style="@style/widgetcard">

                <TextView
                    android:id="@+id/tvNAMA_LAYANAN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvID_LAYANAN"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="@string/nama_layanan"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvHARGA_LAYANAN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvNAMA_PELANGGAN"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="@string/harga_layanan"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvCABANG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvHARGA_LAYANAN"
                    android:fontFamily="@font/poppins"
                    android:text="@string/cabang"
                    android:textSize="18sp"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.cardview.widget.CardView>