<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context=".pegawai.TambahPegawaiActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="12dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/Back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/baseline_arrow_back_24"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/tvJudulHalaman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@id/Back"
            android:fontFamily="@font/nunito"
            android:text="@string/activity_tambah_pegawai"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textFontWeight="700"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout2" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btSIMPAN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tvNAMA_LENGKAP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/nama_lengkap"
                style="@style/FontUtama"/>

            <EditText
                android:id="@+id/etNAMA_LENGKAP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/etborder"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="4dp"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/nama_lengkap"
                android:minHeight="48dp"
                android:padding="8dp" />

            <TextView
                android:id="@+id/tvALAMAT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/alamat_pegawai"
                style="@style/FontUtama"/>

            <EditText
                android:id="@+id/etALAMAT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/etborder"
                android:drawableStart="@drawable/baseline_location_on_24"
                android:drawablePadding="4dp"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/alamat_pegawai"
                android:minHeight="48dp"
                android:padding="8dp" />

            <TextView
                android:id="@+id/tvNO_HP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/no_hp"
                style="@style/FontUtama"/>

            <EditText
                android:id="@+id/etNO_HP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/etborder"
                android:drawableStart="@drawable/baseline_phone_24"
                android:drawablePadding="4dp"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/no_hp"
                android:inputType="phone"
                android:maxLength="13"
                android:minHeight="48dp"
                android:padding="8dp" />

            <TextView
                android:id="@+id/tvBRANCH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/cabang"
                style="@style/FontUtama"/>

            <Spinner
                android:id="@+id/spinnerCabang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/etborder"
                android:minHeight="48dp"
                android:padding="8dp"
                android:fontFamily="@font/nunito_medium" />

            <TextView
                android:id="@+id/tvJENIS_KELAMIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/gender"
                style="@style/FontUtama"/>

            <RadioGroup
                android:id="@+id/rgJENIS_KELAMIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbPRIA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pria"
                    android:fontFamily="@font/nunito_medium"
                    android:minHeight="48dp" />

                <RadioButton
                    android:id="@+id/rbWANITA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wanita"
                    android:fontFamily="@font/nunito_medium"
                    android:layout_marginStart="16dp"
                    android:minHeight="48dp" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btSIMPAN"
        style="@style/Tombol1"
        android:backgroundTint="@color/accent_yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/simpan"
        android:textFontWeight="800"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:textSize="18sp"
        android:textColor="#443000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>